; ModuleID = '/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_fnv.c_hash_fnv1_64.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_fnv.c_hash_fnv1_64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FNV_64_INIT = common dso_local global i32 0, align 4
@FNV_64_PRIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hash_fnv1_64(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @FNV_64_INIT, align 4
  store i32 %7, i32* %5, align 4
  store i64 0, i64* %6, align 8
  br label %8

8:                                                ; preds = %23, %2
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %26

12:                                               ; preds = %8
  %13 = load i32, i32* @FNV_64_PRIME, align 4
  %14 = load i32, i32* %5, align 4
  %15 = mul nsw i32 %14, %13
  store i32 %15, i32* %5, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = load i64, i64* %6, align 8
  %18 = getelementptr inbounds i8, i8* %16, i64 %17
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = load i32, i32* %5, align 4
  %22 = xor i32 %21, %20
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %12
  %24 = load i64, i64* %6, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %6, align 8
  br label %8

26:                                               ; preds = %8
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
